feat: implemented authentication
